--- a/assets/css/task-1.css
+++ b/assets/css/task-1.css
@@ -2,19 +2,20 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> */
 
-body {
-    margin: 0;
-}
-
-.content {
-    margin: 42px 0 0 43px;
-}
-
 .outer-container {
     font-family: "Roboto", sans-serif;
     width: 917px;
     height: 165px;
+    padding: 25px 50px;
+    border-radius: 10px;
     display: flex;
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 25%);
+    transition: all 0.3s ease-in-out;
+}
+
+.outer-container:hover {
+    scale: 1.025;
 }
 
 .sale-section {
