--- a/assets/css/task-2.css
+++ b/assets/css/task-2.css
@@ -2,20 +2,18 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> */
 
-body {
-    margin: 0;
-}
-
-.content {
-    margin: 13px 0 0 10px;
-}
-
 .program-list {
     font-family: "Roboto", sans-serif;
     width: 243px;
     padding: 14px 16px 7px;
     border-radius: 5px;
+    background-color: rgb(255, 255, 255);
     box-shadow: 5px 5px 0 rgba(0, 0, 0, 10%);
+    transition: all 0.3s ease-in-out;
+}
+
+.program-list:hover {
+    scale: 1.025;
 }
 
 .program-list div:last-child {
